--- a/wp-content/themes/nutrition_pump/style.css
+++ b/wp-content/themes/nutrition_pump/style.css
@@ -1,3 +1,15 @@
 img {
   max-width: 100%;
 }
+
+.alignleft {
+  float: left;
+  margin-right: 1em;
+  margin-bottom: 1em;
+}
+
+.alignright {
+  float: right;
+  margin-left: 1em;
+  margin-bottom: 1em;
+}
