--- a/wp-content/themes/nutrition_pump/style.css
+++ b/wp-content/themes/nutrition_pump/style.css
@@ -1,5 +1,6 @@
 img {
   max-width: 100%;
+  height: auto;
 }
 
 .alignleft {
@@ -12,4 +13,10 @@ img {
   float: right;
   margin-left: 1em;
   margin-bottom: 1em;
+}
+
+.aligncenter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
